# fast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  example.db
include/fast/: archivable.h  archive.h  json.h  macros.h  model.h
include/fast/archives/: json.h  sql.h
include/fast/db/: create_db.h  db.h  sqlite3.h
src/: json.cxx  main.cxx  type.cxx
src/archives/: json.cxx  sql.cxx
src/db/: create_db.cxx  db.cxx  sqlite3.cxx
